=== HEAD

* Add #function to SQL::Identifier and SQL::QualifiedIdentifier, allowing for easy use of schema qualified functions or functions names that need quoting (jeremyevans)

* Add SQL::Function#distinct for easier creation of aggregate functions using DISTINCT (jeremyevans)

* Add SQL::Function#over for easier creation of window functions (jeremyevans)

* Don't clear validation instance_hooks until after a successful save (jeremyevans)

* Support :raise_on_save_failure option for one_to_many, pg_array_to_many, and many_to_pg_array associations (jeremyevans)

* Make SQLTime#to_s return a string in HH:MM:SS format, since it shouldn't include date information (jeremyevans)

* Support the Database#tables :schema option in the jdbc adapter (robbiegill, jeremyevans) (#755)

* Automatically rollback transactions in killed threads in ruby 2.0+ (chanks) (#752)

* Add update_or_create plugin, for updating an object if it exists, or creating such an object if it does not (jeremyevans)

* Make auto_validations uniqueness validations work correctly for STI subclasses (jeremyevans)

* Support :dataset option to validates_unique vaildation (jeremyevans)

=== 4.6.0 (2014-01-02)

* Add Database#call_mssql_sproc on MSSQL for calling stored procedures and handling output parameters (jrgns, jeremyevans) (#748)

* Handle RuntimeErrors raised by oci8 in the oracle adapter (jeremyevans)

* Support OFFSET/FETCH on Microsoft SQL Server 2012 (jeremyevans)

* Support :server option for Database#{commit,rollback}_prepared_transaction on PostgreSQL, MySQL, and H2 (jeremyevans) (#743)

* Do not attempt to eager load and raise an exception when doing Model.eager(...).naked.all (jeremyevans)

* Recognize a couple additional disconnect errors in the jdbc/postgresql adapter (jeremyevans) (#742)

=== 4.5.0 (2013-12-02)

* Support :on_commit=>(:drop|:delete_rows|:preserve_rows) options when creating temp tables on PostgreSQL (rosenfeld) (#737)
