@@ -140,20 +140,18 @@ your function call:
   ds.where{function(1, a) > 1}
   # WHERE function(1, a) > 1
 
-If the SQL function does not accept any arguments, you need to provide an empty
-block to the method to distinguish it from a call that will produce an
-SQL::Identifier:
+If the SQL function does not accept any arguments, create an identifier, then
+call the function method on it to produce a function:
 
-  ds.select{|o| o.version{}}
-  ds.select{version{}}
+  ds.select{|o| o.version.function}
+  ds.select{version.function}
   # SELECT version()
   
-To use the SQL wildcard (*) as the sole argument in a function call (most often
-used with the count function), you should provide :* as the sole argument to
-the method, and provide an empty block to the method:
+To use the SQL wildcard (*) as the sole argument in a function call, create a
+function without arguments, then call the * method on the function:
   
-  ds.select{|o| o.count(:*){}}
-  ds.select{count(:*){}}
+  ds.select{|o| o.count.function.*}
+  ds.select{count.function.*}
   # SELECT count(*)
 
 To append the DISTINCT keyword before the method arguments, just call the
@@ -174,12 +172,12 @@ all databases support them, but they are very helpful for certain types of
 queries.  To use them, you should just call the over method on the Function
 object returned, with the options for the window:
 
-  ds.select{|o| o.rank{}.over}
-  ds.select{rank{}.over}
+  ds.select{|o| o.rank.function.over}
+  ds.select{rank.function.over}
   # SELECT rank() OVER ()
   
-  ds.select{|o| o.count(:*){}.over}
-  ds.select{count(:*){}.over}
+  ds.select{|o| o.count.function.*.over}
+  ds.select{count.function.*.over}
   # SELECT count(*) OVER ()
   
   ds.select{|o| o.sum(o.col1).over(:partition=>o.col2, :order=>o.col3)}
